Resume pdf added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Jim Mooney - Resume</title>
+</head>
+<style>
+    .pdf {
+        width: 100%;
+        aspect-ratio: 4 / 3;
+    }
+    .pdf,
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+   h1,
+    h3 {
+        text-align: center;
+    }
+    h1 {
+        color: green;
+    }
+</style>
+<body>
+        <h1>Jim Mooney</h1>
+        <h3>Resume - Game Programmer</h3>
+        <iframe class="pdf" 
+                src=
+"./Jim-Mooney-Resume.pdf"
+            width="800" height="500">
+        </iframe>
+</body>
+</html>
