Update index.html to remove resume

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
     }
 </style>
 <body>
-        <h1>Jim Mooney</h1>
-        <h3>Resume - Game Programmer</h3>
-        <iframe class="pdf" 
-                src=
-"./Jim-Mooney-Resume.pdf"
-            width="800" height="500">
-        </iframe>
+        <h1>StillStanding2025</h1>
+        <h3>Placeholder text - (resume removed since no longer job hunting)</h3>
 </body>
 </html>
