--- a/DodgeCreeps.html
+++ b/DodgeCreeps.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-		<title>dodgeCreepsDemo</title>
+		<title>TagCreeps</title>
 		<style>
 html, body, #canvas {
 	margin: 0;
@@ -111,7 +111,7 @@ body {
 
 		<script src="DodgeCreeps.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"DodgeCreeps","experimentalVK":false,"fileSizes":{"DodgeCreeps.pck":3164384,"DodgeCreeps.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"DodgeCreeps","experimentalVK":false,"fileSizes":{"DodgeCreeps.pck":3779632,"DodgeCreeps.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
