removing name in resume

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Jim Mooney - Resume</title>
+    <title>StillStanding2025 - Resume</title>
 </head>
 <style>
     .pdf {
